Fixed font on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,6 @@
 #split-name {
 	text-align: center;
 	font-family: "Spicy Rice", cursive;
-	font-size: 16rem;
 }
 
 .char {
